--- a/src/app/layout/containers/header/header.container.html
+++ b/src/app/layout/containers/header/header.container.html
@@ -1,2 +1,2 @@
-<header-component [isBooksPage]="isBooksPage" (burgerClicked)="changeSbStatus()" (filtersClicked)="changeFilStatus()" (logout)="logout.emit()">
+<header-component (burgerClicked)="changeSbStatus()" (logout)="logout.emit()">
 </header-component>
