--- a/src/app/auth/components/auth/auth.component.scss
+++ b/src/app/auth/components/auth/auth.component.scss
@@ -1,6 +1,11 @@
 form {
     display: flex;
     flex-direction: column;
+    #loginError {
+        text-align: center;
+        color: red;
+        padding-bottom: 10px;
+    }
 }
 
 * {
