--- a/src/app/books/containers/books/books.container.html
+++ b/src/app/books/containers/books/books.container.html
@@ -13,6 +13,7 @@
   </div>
   <app-paginator
     [records]="booksQuantity"
+    [index]="booksPageIndex"
     [limits]="[10, 25, 50, 75, 100, 125, 150]"
     (changed)="changePageSize($event)"
     [class.hide]="emptyResult"
