--- a/src/app/books/components/book-edit-modal/book-edit-modal.component.html
+++ b/src/app/books/components/book-edit-modal/book-edit-modal.component.html
@@ -6,12 +6,12 @@
       <div id="fields">
         <mat-form-field appearance="outline">
           <mat-label>Book title</mat-label>
-          <input matInput notDigits formControlName="titleCtl" required />
+          <input matInput notDigits formControlName="title" required />
         </mat-form-field>
 
         <mat-form-field appearance="outline">
           <mat-label>Genres</mat-label>
-          <mat-select formControlName="genresCtl" multiple required>
+          <mat-select formControlName="genres" multiple required>
             <mat-option *ngFor="let genre of data.genres" [value]="genre.name">
               {{ genre.name }}
             </mat-option>
@@ -20,7 +20,7 @@
 
         <mat-form-field appearance="outline">
           <mat-label>Author</mat-label>
-          <mat-select formControlName="authorCtl" required>
+          <mat-select formControlName="author" required>
             <mat-option *ngFor="let author of data.authors" [value]="author.id">
               {{ author.first_name }} {{ author.last_name }}
             </mat-option>
@@ -32,7 +32,7 @@
           <input
             matInput
             notLetters
-            formControlName="priceCtl"
+            formControlName="price"
             maxlength="6"
             required
           />
@@ -44,7 +44,7 @@
             matInput
             dateMask
             [matDatepicker]="releasePicker"
-            formControlName="releaseDateCtl"
+            formControlName="releaseDate"
             maxlength="10"
           />
           <mat-datepicker-toggle matSuffix [for]="releasePicker">
@@ -53,7 +53,7 @@
             #releasePicker
             startView="multi-year"
           ></mat-datepicker>
-          <mat-error *ngIf="releaseDate.hasError('matDatepickerParse')">
+          <mat-error *ngIf="releaseDateCtl.hasError('matDatepickerParse')">
             Date must be in format: YYYY-MM-DD
           </mat-error>
         </mat-form-field>
@@ -64,7 +64,7 @@
             matInput
             dateMask
             [matDatepicker]="writingPicker"
-            formControlName="writingDateCtl"
+            formControlName="writingDate"
             maxlength="10"
           />
           <mat-datepicker-toggle matSuffix [for]="writingPicker">
@@ -73,7 +73,7 @@
             #writingPicker
             startView="multi-year"
           ></mat-datepicker>
-          <mat-error *ngIf="writingDate.hasError('matDatepickerParse')">
+          <mat-error *ngIf="writingDateCtl.hasError('matDatepickerParse')">
             Date must be in format: YYYY-MM-DD
           </mat-error>
         </mat-form-field>
@@ -85,7 +85,7 @@
         matInput
         cols="30"
         rows="5"
-        formControlName="descriptionCtl"
+        formControlName="description"
         required
       ></textarea>
     </mat-form-field>
