--- a/src/app/book/components/book/book.component.html
+++ b/src/app/book/components/book/book.component.html
@@ -1,29 +1,25 @@
-  <div id="bookDetails">
-    <mat-grid-list cols="2" rowHeight="25%">
-      <mat-grid-tile [colspan]="2">
-        <h1>{{ book.title }}</h1>
-      </mat-grid-tile>
-      <mat-grid-tile [rowspan]="2">
-        <img src="../../../../assets//book.png" alt="Book image not found" />
-      </mat-grid-tile>
-      <mat-grid-tile>
-        <pre>
-                    Author: {{ book.author.first_name }} {{ book.author.last_name }}
-                    
-                    Genres: {{ book.genres | comma }}
-    
-                    Writing date: {{ book.writing_date | date: "dd MMMM yyyy" }} 
-    
-                    Release date: {{ book.release_date | date: "dd MMMM yyyy" }} 
-        </pre>
-      </mat-grid-tile>
-      <mat-grid-tile col="2">
-        <h2>Price: {{ book.price }}</h2>
-      </mat-grid-tile>
-      <mat-grid-tile [colspan]="2">
-        <p>
-          {{ book.description }}
-        </p>
-      </mat-grid-tile>
-    </mat-grid-list>
+<div id="bookDetails">
+  <h1>{{ book.title }}</h1>
+  <ng-container *ngIf="isAuth">
+    <div id="features">
+      <button mat-button color="primary" (click)="emitEdit()">Edit book</button>
+      <button mat-button color="warn" (click)="emitDelete()">Delete book</button>
+    </div>
+  </ng-container>
+  <div id="imgAndMainInf">
+    <img src="../../../../assets/book.png" alt="Book image not found" />
+    <div id="inf">
+      <h4>Author: {{ book.author.first_name }} {{ book.author.last_name }}</h4>
+      <h4>Genres: {{ book.genres | comma }}</h4>
+      <h4>Writing date: {{ book.writing_date | date: "dd MMMM yyyy" }}</h4>
+      <h4>Release date: {{ book.release_date | date: "dd MMMM yyyy" }}</h4>
+      <div id="price">
+        <h2>Price: {{ book.price }} $</h2>
+        <button mat-raised-button color="primary">Add to cart</button>
+      </div>
+    </div>
   </div>
+  <p>
+    {{ book.description }}
+  </p>
+</div>
