--- a/src/app/book/components/book/book.component.scss
+++ b/src/app/book/components/book/book.component.scss
@@ -1,8 +1,40 @@
 #bookDetails {
-  height: 92%;
+  padding-top: 70px;
+  display: flex;
+  flex-direction: column;
 
+  h1 {
+    text-align: center;
+  }
+
+  #features {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 16px;
+  }
+
+  #imgAndMainInf {
+    display: flex;
+    justify-content: space-around;
+
+    img {
+      max-height: 400px;
+    }
+
+    #inf {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+
+      #price {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+    }
+  }
   p {
     font-size: 16px;
-    margin: 0 20px;
+    margin: 20px;
   }
 }
