feat(book-module): add edit func in own book page

--- a/src/app/books/components/book-edit-modal/book-edit-modal.component.html
+++ b/src/app/books/components/book-edit-modal/book-edit-modal.component.html
@@ -6,7 +6,7 @@
       <div id="fields">
         <mat-form-field appearance="outline">
           <mat-label>Book title</mat-label>
-          <input matInput notDigits formControlName="title" required />
+          <input matInput formControlName="title" required />
         </mat-form-field>
 
         <mat-form-field appearance="outline">
