--- a/src/app/book/containers/book/book.container.html
+++ b/src/app/book/containers/book/book.container.html
@@ -1,10 +1,15 @@
-<ng-container *ngIf="book$ | async as book; else loading">
-    <book-component [book]="book">
-    </book-component>
+<ng-container *ngIf="book; else loading">
+  <book-component
+    [book]="book"
+    [isAuth]="isAuth"
+    (edit)="showEditModal()"
+    (delete)="showDeleteModal()"
+  >
+  </book-component>
 </ng-container>
 
 <ng-template #loading>
-    <div id="spinner">
-        <mat-spinner></mat-spinner>
-    </div>
+  <div id="spinner">
+    <mat-spinner></mat-spinner>
+  </div>
 </ng-template>
