--- a/src/app/books/containers/filters/filters.container.scss
+++ b/src/app/books/containers/filters/filters.container.scss
@@ -1,21 +1,29 @@
 mat-drawer-container {
-    position: fixed;
-    top: 55px;
-    right: 0;
-    z-index: 100;
-    width: 100%;
-    height: 100%;
-    background: none;
-    
-    mat-drawer{
-        width: 300px;
-        #buttons {
-            display: flex;
-            flex-direction: column;
-          }        
+  position: fixed;
+  top: 55px;
+  right: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background: none;
+
+  mat-drawer {
+    width: 500px;
+    #buttons {
+      display: flex;
+      flex-direction: column;
     }
+  }
 }
-.hide{
-    transition: .5s;
-    z-index: -1;
+.hide {
+  transition: 0.5s;
+  z-index: -1;
+}
+
+@media (max-width: 710px) {
+  mat-drawer-container {
+    mat-drawer {
+      width: 80vw;
+    }
+  }
 }
