--- a/src/app/books/containers/books/books.container.html
+++ b/src/app/books/containers/books/books.container.html
@@ -7,7 +7,7 @@
     </div>
   </ng-container>  
   <books-component
-    [books]="books$ | async"
+    [books]="books"
     (editClicked)="showEditModal($event)"
     (deleteClicked)="showDeleteModal($event)"
   >
