--- a/src/app/book/views/book/book.view.html
+++ b/src/app/book/views/book/book.view.html
@@ -1,2 +1,2 @@
-<book-container [paramsStream$]="paramsStream$" (contentNotFound)="show404()">
+<book-container [id]="id$ | async" (contentNotFound)="show404()">
 </book-container>
