--- a/src/app/auth/components/auth/auth.component.scss
+++ b/src/app/auth/components/auth/auth.component.scss
@@ -1,6 +1,7 @@
 form {
     display: flex;
     flex-direction: column;
+    margin-top: 100px;
     #loginError {
         text-align: center;
         color: red;
