Auth with Google

--- a/src/app/auth/components/auth/auth.component.html
+++ b/src/app/auth/components/auth/auth.component.html
@@ -48,5 +48,7 @@
       Login
     </button>
   </ng-template>
-  <button mat-button>Sign in with Google</button>
+  <button mat-button (click)="signin()">Sign in with Google</button>
+
 </form>
+<a href="tel:555-555-5555">call</a>
